--- a/index.html
+++ b/index.html
@@ -1153,8 +1153,8 @@
 
         <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
           <h4 class="text-white">Contact</h4>
-          <p>waralla waththa,</p>
-          <p>Mohoththawa thorayaya</p>
+          <p>Waralla Waththa,</p>
+          <p>Mohoththawa Thorayaya</p>
           <p class="mt-3"><strong>Phone:</strong> 076 0386224</p>
           <p><strong>Email:</strong> yomalisenevirathne2003@gmail.com</p>
         </div>
